2004-03-23  Bernie Solomon  <bernard@ugsolutions.com>

	* hppa/hppa-codegen.h: created

	* hppa/tramp.c: changed style to be more like
	other platforms.

	* hppa/Makefile.am: add hppa-codegen.h

2004-03-16  Zoltan Varga  <vargaz@freemail.hu>

	* sparc/sparc-codegen.h: Add v9 branches with prediction.

2004-03-15  Bernie Solomon  <bernard@ugsolutions.com>

	* sparc/sparc-codegen.h: tweak sparc_mov_reg_reg
	so Sun's dis command recognizes it.

2004-03-15  Zoltan Varga  <vargaz@freemail.hu>

	* sparc/sparc-codegen.h: Add some v9 instructions.

2004-03-11  Zoltan Varga  <vargaz@freemail.hu>

	* sparc/sparc-codegen.h: Ongoing sparc work.

2004-03-07  Duncan Mak  <duncan@ximian.com>

        * Makefile.am: Removed the reference to 'x86-64'. This was the cause
        of the missing Mono daily tarballs, 'make dist' wasn't working.
        
        We do have an 'amd64' directory, but it doesn't make it in 'make
        dist'.

2004-02-19  Zoltan Varga  <vargaz@freemail.hu>

	* sparc/sparc-codegen.h: Fix lots of opcodes + add new ones.

	* sparc/tramp.c: Fix alignment of structures containing doubles.

2004-02-02  Zoltan Varga  <vargaz@freemail.hu>

	* sparc/tramp.c: Implement all floating point argument passing conventions in
	Sparc V8. Also fix structure passing in V8.

Thu Nov 13 16:24:29 CET 2003 Paolo Molaro <lupus@ximian.com>

	* ppc/ppc-codegen.h: fixed most of the incorrect macros from ct.

2003-10-31  Zoltan Varga  <vargaz@freemail.hu>

	* */tramp.c (mono_create_method_pointer): Rename to 
	mono_arch_create_method_pointer, move common code to a new function in
	interp.c.

	* */tramp.c (mono_create_trampoline): Rename to 
	mono_arch_create_trampoline for consistency.
	
2003-10-13  Bernie Solomon  <bernard@ugsolutions.com>

	* x86/tramp.c: restore EDX after memcpy call

2003-10-13  Bernie Solomon  <bernard@ugsolutions.com>

	* Makefile.am: add hppa subdir 

	* hppa/tramp.c: add initial implementation - this is 64 bit only
	hppa/Makefile.am hppa/.cvsignore: added
